- player listing and enter/exit notifications in areas - fixes for input handling on firefox browsers

--- a/assets/stylesheets/application.sass
+++ b/assets/stylesheets/application.sass
@@ -48,5 +48,8 @@ body
 .purple
   color: #aa00aa
 
+.cyan
+  color: #59a7c4
+
 .golden-yellow
   color: #ffc90e
